GUI + finished version 1.0